--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       uri = 'wss:';
     }
     uri += '//' + loc.host;
-    uri += loc.pathname + 'ws';
+    uri += loc.pathname + 'api/v1/ws';
 
     ws = new WebSocket(uri)
 
